src/main/default/objects/FieldMappingItem__mdt/FieldMappingItem__mdt.object-meta.xml
<CustomObject>
    <label>Field Mapping Item</label>
    <pluralLabel>Field Mapping Items</pluralLabel>
</CustomObject>