src/main/default/objects/FieldMappingItem__mdt/fields/FieldMapping__c.field-meta.xml
<CustomField>
    <fullName>FieldMapping__c</fullName>
    <label>Field Mapping</label>
    <referenceTo>FieldMapping__mdt</referenceTo>
    <relationshipLabel>Field Mapping Items</relationshipLabel>
    <relationshipName>FieldMappingItems</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>