src/main/default/objects/FieldMappingItem__mdt/listViews/AllMappings.listView-meta.xml
<ListView>
    <fullName>AllMappings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>FieldMapping__c</columns>
    <columns>SourceField__c</columns>
    <columns>StaticValue__c</columns>
    <columns>TargetField__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Mappings</label>
    <language>en_US</language>
</ListView>